--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-swipeable-views": "^0.13.0",
     "@types/react-swipeable-views-utils": "^0.13.2",
     "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.8",
     "emailjs": "^3.3.0",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
@@ -23,6 +24,8 @@
     "react-redux": "^7.2.1",
     "react-scripts": "^3.4.3",
     "react-scroll": "^1.8.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "typescript": "~3.7.2"
   },
   "scripts": {
